--- a/GT/css/_mainPage.scss
+++ b/GT/css/_mainPage.scss
@@ -183,14 +183,37 @@
     width: max-content;
     z-index: 10;
     color: $gray;
+    &::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $bgWhite;
+    }
     &::after {
         content: "";
         position: absolute;
         bottom: 0;
         left: 101%;
-        width: 100vw;
+        width: 0vw;
         height: 1px;
         border-bottom: 1px solid $blueClass;
+    }
+    &.animated::before {
+        transform: translateX(100%);
+        transition: 0.5s ease-out;
+    }
+    &.animated::after {
+        width: 100vw;
+        transition: 1s ease-out 0.3s;
+    }
+    &_black::before {
+        background-color: transparent;
+    }
+    &_white::before {
+        background-color: $white;
     }
     @include media-breakpoint-down(sm) {
         margin-right: 20px;
@@ -219,6 +242,12 @@
         left: 0;
         width: 100%;
         height: auto;
+        transform: scaleY(0.7);
+        transition: 1.5s ease-out;
+        transform-origin: bottom;
+        &.animated {
+            transform: scaleY(1);
+        }
     }
     &__img {
         position: relative;
@@ -243,13 +272,14 @@
     align-items: flex-end;
     justify-content: flex-end;
     height: 500px;
+    visibility: visible !important;
     @include media-breakpoint-down(sm) {
         height: 300px;
         margin-bottom: 450px;
     }
     &__item {
         cursor: pointer;
-        height: 100%;
+        height: 10%;
         background-size: cover;
         background-position: center bottom;
         // width: 25%;
@@ -265,9 +295,24 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.4);
-            transition: 1s;
+            transition: 1.5s;
             z-index: 1;
         }
+    }
+    .animated &__item:nth-child(1) {
+        height: 100%;
+    }
+    .animated &__item:nth-child(2) {
+        height: 100%;
+        transition-delay: 0.3s;
+    }
+    .animated &__item:nth-child(3) {
+        height: 100%;
+        transition-delay: 0.6s;
+    }
+    .animated &__item:nth-child(4) {
+        height: 100%;
+        transition-delay: 0.9s;
     }
     &__content {
         position: absolute;
@@ -566,6 +611,7 @@
         top: 0;
         left: 0;
         width: 100%;
+        height: 40vh;
         opacity: 0;
     }
     &__contentWrap {
@@ -575,6 +621,9 @@
         opacity: 0;
         img {
             width: 100%;
+            height: 0vh;
+            object-fit: cover;
+            object-position: top;
         }
     }
     &__textWrap {
