--- a/GT/css/_header.scss
+++ b/GT/css/_header.scss
@@ -6,6 +6,9 @@
     background-color: $bgWhite;
     padding: 20px 0 40px;
     z-index: 100;
+    @include media-breakpoint-down(lg) {
+        padding: 20px 0 30px;
+    }
     @include media-breakpoint-down(sm) {
         padding: 20px 0 20px;
     }
@@ -57,6 +60,9 @@
     &__logo {
         height: 62px;
         width: auto;
+        @include media-breakpoint-down(lg) {
+            height: 50px;
+        }
         @include media-breakpoint-down(sm) {
             height: 40px;
         }
