--- a/GT/css/style.scss
+++ b/GT/css/style.scss
@@ -243,7 +243,10 @@ h2,
         font-size: 24px;
         line-height: 31px;
     }
-    .h4 {}
+    .h4 {
+        font-size: 32px;
+        line-height: 40px;
+    }
     .h5 {
         font-size: 18px;
         line-height: 22px;
