--- a/GT/css/_header.scss
+++ b/GT/css/_header.scss
@@ -68,3 +68,58 @@
         }
     }
 }
+
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    transition-delay: 1s;
+    &_active {
+        z-index: 200;
+        overflow: hidden;
+        transition-delay: 0s;
+    }
+    &__bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: 1s;
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 2;
+            background-color: rgba(#000000, 0.8);
+        }
+    }
+    &_active &__bg {
+        opacity: 1;
+    }
+    &__video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    &__content {
+        position: absolute;
+        top: 50%;
+        left: 40%;
+        width: 100%;
+        background-color: $dark;
+        color: $white;
+        transform: translate(-50%, 100%);
+        transition: 1s;
+    }
+    &_active &__content {
+        transform: translate(-50%, 0%);
+    }
+}
