--- a/GT/css/style.css
+++ b/GT/css/style.css
@@ -6749,6 +6749,75 @@ button {
   }
 }
 
+.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+
+.nav_active {
+  z-index: 200;
+  overflow: hidden;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+
+.nav__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.nav__bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.nav_active .nav__bg {
+  opacity: 1;
+}
+
+.nav__video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.nav__content {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  width: 100%;
+  background-color: #4F4F4F;
+  color: #f2f2f2;
+  -webkit-transform: translate(-50%, 100%);
+          transform: translate(-50%, 100%);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.nav_active .nav__content {
+  -webkit-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
+}
+
 .firstSection {
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.31)), to(rgba(0, 0, 0, 0.31))), url(../img/mainBg.jpg);
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.31), rgba(0, 0, 0, 0.31)), url(../img/mainBg.jpg);
