--- a/GT/css/_header.scss
+++ b/GT/css/_header.scss
@@ -112,14 +112,72 @@
     &__content {
         position: absolute;
         top: 50%;
-        left: 40%;
-        width: 100%;
-        background-color: $dark;
-        color: $white;
-        transform: translate(-50%, 100%);
+        left: 8.33%;
+        width: 91.77%;
+        transform: translate(100%, -50%);
         transition: 1s;
+        z-index: 10;
+        counter-reset: section;
+        li {
+            margin-bottom: 40px;
+        }
+        a {
+            color: $white;
+            opacity: 0.6;
+            transition: 0.3s;
+            &::before {
+                counter-increment: section;
+                content: counter(section);
+                margin-right: 40px;
+            }
+            &:hover {
+                opacity: 1;
+            }
+        }
+    }
+    &__inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background-color: #24272E;
+        color: $white;
+        padding: 100px 8.33vw;
     }
     &_active &__content {
-        transform: translate(-50%, 0%);
+        transform: translate(0, -50%);
     }
+    & .header {
+        opacity: 0;
+        transition: 1s;
+    }
+    &_active .header {
+        opacity: 1;
+    }
+    &__img {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        @include media-breakpoint-down(md) {
+            height: 78px;
+            width: auto;
+            right: auto;
+            left: 33vw;
+        }
+        @include media-breakpoint-down(sm) {
+            height: 58px;
+            right: auto;
+            left: 8.33vw;
+        }
+    }
+}
+
+.burger {
+    cursor: pointer;
+}
+
+.burgerFixed {
+    position: fixed;
+    right: 4.12%;
+    top: 50%;
+    z-index: 200;
 }
