--- a/GT/css/style.css
+++ b/GT/css/style.css
@@ -6803,19 +6803,93 @@ button {
 .nav__content {
   position: absolute;
   top: 50%;
-  left: 40%;
-  width: 100%;
-  background-color: #4F4F4F;
+  left: 8.33%;
+  width: 91.77%;
+  -webkit-transform: translate(100%, -50%);
+          transform: translate(100%, -50%);
+  -webkit-transition: 1s;
+  transition: 1s;
+  z-index: 10;
+  counter-reset: section;
+}
+
+.nav__content li {
+  margin-bottom: 40px;
+}
+
+.nav__content a {
   color: #f2f2f2;
-  -webkit-transform: translate(-50%, 100%);
-          transform: translate(-50%, 100%);
+  opacity: 0.6;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.nav__content a::before {
+  counter-increment: section;
+  content: counter(section);
+  margin-right: 40px;
+}
+
+.nav__content a:hover {
+  opacity: 1;
+}
+
+.nav__inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #24272E;
+  color: #f2f2f2;
+  padding: 100px 8.33vw;
+}
+
+.nav_active .nav__content {
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
+.nav .header {
+  opacity: 0;
   -webkit-transition: 1s;
   transition: 1s;
 }
 
-.nav_active .nav__content {
-  -webkit-transform: translate(-50%, 0%);
-          transform: translate(-50%, 0%);
+.nav_active .header {
+  opacity: 1;
+}
+
+.nav__img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+@media (max-width: 1024.98px) {
+  .nav__img {
+    height: 78px;
+    width: auto;
+    right: auto;
+    left: 33vw;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .nav__img {
+    height: 58px;
+    right: auto;
+    left: 8.33vw;
+  }
+}
+
+.burger {
+  cursor: pointer;
+}
+
+.burgerFixed {
+  position: fixed;
+  right: 4.12%;
+  top: 50%;
+  z-index: 200;
 }
 
 .firstSection {
@@ -6834,6 +6908,8 @@ button {
   height: 100%;
   width: 16.6666%;
   background-color: #E3E6EC;
+  -webkit-transition: all 0.5s cubic-bezier(0.19, 0, 0.51, 1) 0.2s;
+  transition: all 0.5s cubic-bezier(0.19, 0, 0.51, 1) 0.2s;
 }
 
 @media (max-width: 1024.98px) {
@@ -6882,6 +6958,8 @@ button {
   position: relative;
   text-transform: uppercase;
   line-height: 1;
+  -webkit-transition: 0.5s cubic-bezier(0.19, 0, 0.51, 1) 0.3s;
+  transition: 0.5s cubic-bezier(0.19, 0, 0.51, 1) 0.3s;
 }
 
 .firstSection__name span {
@@ -6898,6 +6976,8 @@ button {
   -webkit-backdrop-filter: blur(4px);
           backdrop-filter: blur(4px);
   z-index: 1;
+  -webkit-transition: all 0.5s cubic-bezier(0.19, 0, 0.51, 1) 0.2s;
+  transition: all 0.5s cubic-bezier(0.19, 0, 0.51, 1) 0.2s;
 }
 
 @media (max-width: 1399.98px) {
@@ -6938,6 +7018,8 @@ button {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: start;
+  -webkit-transition: 0.5s cubic-bezier(0.19, 0, 0.51, 1) 0.1s;
+  transition: 0.5s cubic-bezier(0.19, 0, 0.51, 1) 0.1s;
 }
 
 .firstSection__sloganText {
@@ -6964,11 +7046,6 @@ button {
   z-index: 1;
 }
 
-.btnNext * {
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
 .btnNext__inner {
   width: 100%;
   height: 100%;
@@ -6989,6 +7066,7 @@ button {
   top: 0;
   left: 0;
   stroke: #f2f2f2;
+  fill: transparent;
 }
 
 .btnNext__time {
@@ -6996,6 +7074,21 @@ button {
   top: 0;
   left: 0;
   stroke: #f2f2f2;
+  fill: transparent;
+  stroke-width: 5;
+  stroke-dasharray: 450;
+  stroke-dashoffset: 450;
+  -webkit-transition: 40s;
+  transition: 40s;
+}
+
+.btnNext__time path {
+  stroke: #f2f2f2;
+  stroke-width: 5;
+  stroke-dasharray: 450;
+  stroke-dashoffset: 450;
+  -webkit-transition: 40s;
+  transition: 40s;
 }
 
 .btnNext__line {
@@ -7005,6 +7098,8 @@ button {
   width: 1px;
   height: 100px;
   background-color: #f2f2f2;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .btnNext:hover {
@@ -7049,6 +7144,19 @@ button {
   .btnNext {
     display: none;
   }
+}
+
+.btnNext_video {
+  bottom: -60px;
+}
+
+.btnNext_video .btnNext__text {
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.btnNext_sectionSecvices {
+  bottom: -60px;
 }
 
 .sectionVideo {
@@ -7143,6 +7251,15 @@ button {
   }
 }
 
+@media (max-width: 1024.98px) {
+  .sectionAbout__scr1, .sectionAbout__scr2 {
+    -webkit-transition: -webkit-transform 0.5s ease-out 0s;
+    transition: -webkit-transform 0.5s ease-out 0s;
+    transition: transform 0.5s ease-out 0s;
+    transition: transform 0.5s ease-out 0s, -webkit-transform 0.5s ease-out 0s;
+  }
+}
+
 .numCompany {
   border-bottom: 1px solid #1E7FCA;
 }
@@ -7175,8 +7292,61 @@ button {
   position: relative;
 }
 
+.lighthouse__slogan {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: absolute;
+  top: 65%;
+  left: 16.66%;
+  color: #f2f2f2;
+  z-index: 1;
+}
+
+.lighthouse__quote {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 45px;
+  height: auto;
+  margin-right: 35px;
+}
+
+@media (max-width: 1024.98px) {
+  .lighthouse__quote {
+    width: 22px;
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .lighthouse__quote {
+    width: 18px;
+  }
+}
+
+.lighthouse__text {
+  width: 100%;
+  max-width: 560px;
+}
+
+@media (max-width: 1024.98px) {
+  .lighthouse__text {
+    max-width: 380px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .lighthouse__text {
+    max-width: 270px;
+  }
+}
+
 .sectionSecvices {
   color: #f2f2f2;
+  position: relative;
 }
 
 .sectionSecvices__inner {
@@ -7583,6 +7753,17 @@ button {
 .licenses__img {
   width: 100%;
   height: auto;
+  -webkit-transition: -webkit-transform 0.5s ease-out 0s;
+  transition: -webkit-transform 0.5s ease-out 0s;
+  transition: transform 0.5s ease-out 0s;
+  transition: transform 0.5s ease-out 0s, -webkit-transform 0.5s ease-out 0s;
+}
+
+@media (max-width: 1024.98px) {
+  .licenses__img {
+    -webkit-transition: 0s !important;
+    transition: 0s !important;
+  }
 }
 
 .licenses__img_h {
@@ -7593,6 +7774,7 @@ button {
 
 .projectHead {
   color: #828282;
+  position: relative;
 }
 
 .partners {
@@ -7610,6 +7792,13 @@ button {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+}
+
+@media (max-width: 1024.98px) {
+  .partners__line {
+    -webkit-transition: 0s !important;
+    transition: 0s !important;
+  }
 }
 
 .partners__item {
@@ -7632,105 +7821,13 @@ button {
 
 .sliderP__item {
   position: relative;
-  margin-bottom: 100px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  height: 300px;
-}
-
-.sliderP__bg {
-  opacity: 0.2;
-  width: 80%;
-  margin-left: 20%;
-}
-
-.sliderP__bg img {
-  width: 100%;
-  height: 300px;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .sliderP__content {
-  z-index: 1;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 40vh;
   opacity: 0;
-}
-
-.sliderP__contentWrap {
-  position: relative;
-}
-
-.sliderP__img {
-  opacity: 0;
-}
-
-.sliderP__img img {
-  width: 100%;
-  height: 0vh;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
-}
-
-.sliderP__textWrap {
-  position: absolute;
-  top: 60%;
-  left: 20%;
-  width: 80%;
-  height: 400px;
-  -webkit-transform: translate(100%);
-          transform: translate(100%);
-  background: rgba(0, 0, 0, 0.6);
-  padding: 0px 80px;
-  -webkit-transition: 1s;
-  transition: 1s;
-  /* height: 0; */
-  overflow: hidden;
-}
-
-@media (max-width: 1399.98px) {
-  .sliderP__textWrap {
-    top: 40%;
-    left: 10%;
-    width: 90%;
-  }
-}
-
-.sliderP__text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 40px;
-  margin-bottom: 60px;
-  margin-right: 50px;
-}
-
-.sliderP__text p {
-  margin-right: 50px;
-  max-width: 45%;
-}
-
-.sliderP__line {
-  margin-top: 8px;
-  width: 50px;
-  min-width: 50px;
-  margin-right: 20px;
-  height: 1px;
-  background-color: #f2f2f2;
-}
-
-.active .sliderP__content {
-  opacity: 1;
-}
-
-.sliderP__item.active {
-  height: 80vh;
 }
 
 .anim .firstSection::after {
