--- a/GT/css/_header.scss
+++ b/GT/css/_header.scss
@@ -120,6 +120,14 @@
         counter-reset: section;
         li {
             margin-bottom: 40px;
+            @include media-breakpoint-down(lg) {
+                margin-bottom: 30px;
+                ;
+            }
+            @include media-breakpoint-down(md) {
+                margin-bottom: 20px;
+                ;
+            }
         }
         a {
             color: $white;
@@ -141,7 +149,7 @@
         height: 100%;
         background-color: #24272E;
         color: $white;
-        padding: 100px 8.33vw;
+        padding: 10vh 8.33vw;
     }
     &_active &__content {
         transform: translate(0, -50%);
@@ -157,6 +165,10 @@
         position: absolute;
         bottom: 0;
         right: 0;
+        @include media-breakpoint-down(lg) {
+            height: 14vh;
+            width: auto;
+        }
         @include media-breakpoint-down(md) {
             height: 78px;
             width: auto;
