--- a/GT/css/style.css
+++ b/GT/css/style.css
@@ -7842,6 +7842,12 @@ button {
   position: relative;
 }
 
+@media (max-width: 767.98px) {
+  .projectHead .m-b-6 {
+    margin-bottom: 160px;
+  }
+}
+
 .partners {
   color: #4F4F4F;
 }
@@ -8039,6 +8045,57 @@ button {
 .counter_hide {
   opacity: 0;
   pointer-events: none;
+}
+
+.sliderPM {
+  color: #f2f2f2;
+}
+
+.sliderPM__item {
+  position: relative;
+}
+
+.sliderPM__img {
+  height: 300px;
+  width: 100%;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+  overflow: hidden;
+}
+
+.sliderPM__img img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.sliderPM__descriptionWrap {
+  margin: -100px 0 0 auto;
+  width: 87%;
+  z-index: 1;
+  overflow: hidden;
+}
+
+@media (max-width: 767.98px) {
+  .sliderPM__descriptionWrap {
+    width: 95%;
+  }
+}
+
+.sliderPM__description {
+  background: rgba(0, 0, 0, 0.6);
+  padding: 45px 90px 45px 30px;
+  position: relative;
+}
+
+@media (max-width: 767.98px) {
+  .sliderPM__description {
+    padding: 30px 40px 30px 20px;
+  }
 }
 
 .anim .firstSection::after {
